* Simplified and improved select box styling. Also updated general input styles to match. Unsure about the internal padding as it may look like an extra space in the inputs, though... (index.css) * Simplified internal HTML code when dealing with optgroups. Instead of having nested lists, everything is on a single level. (sbox.js) ! Fixed a minor bug in the original select box plugin where aria-disabled wasn't set at all. (sbox.js) ! Select box selection titles needed to be un-htmlspecialchar'ed, or whatever. (sbox.js)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -394,17 +394,12 @@ input, select, textarea
 	font: 95%/115% $main_font
 	color: #000
 	background: $main_bg
-	border: 1px solid #7f9db9
-	padding: 2px
+	box-sizing: border-box
+	border-radius: 5px
+	border: 1px solid #abadb3
+	padding: 4px 5px
 	:hover, :focus
-		border: 1px solid #454545
-
-// Select elements look horrible with the extra padding, so leave them unpadded.
-select
-	padding: 0
-	// Add some padding to the options instead.
-	option
-		padding: 1px
+		border: 1px solid #6f8da9
 
 select.qaction, input.qaction
 	font-size: .85em
@@ -469,9 +464,9 @@ input.cancel extends input.submit
 
 input.search
 	background: #fdfaf9 url($images/filter.gif) 5px 3px no-repeat
-	padding-left: 24px
+	height, padding-left: 24px
 	#header &
-		background: rgb(235,235,215) url($images/filter.gif) 5px 3px no-repeat
+		background: rgb(235,235,215) url($images/filter.gif) 5px 4px no-repeat
 
 // All input elements that are checkboxes or radio buttons shouldn't have a border around them.
 input[type=checkbox], input[type=radio]
@@ -1276,20 +1271,40 @@ dl#feed
 	font-size: 1em
 	margin: 1px
 	position: relative
-	vertical-align: middle
 
-.selectbox .display
-	background: #fff
-	border: 1px solid #abadb3
-	color: #000
-	cursor: default
-	display: block
-	font-weight: normal
-	height, line-height: 1.46em
-	overflow: hidden
-	padding: 0 24px 0 3px
-	position: relative
-	text-decoration, outline: none
+	.display
+		background: #fff
+		border: 1px solid #abadb3
+		color: #000
+		cursor: default
+		display: block
+		font-weight: normal
+		height, line-height: 1.46em
+		overflow: hidden
+		position: relative
+		text-decoration, outline: none
+		padding: 2px 24px 2px 3px
+		border-radius: 5px
+
+		.text
+			padding: 0 2px
+
+		.btn
+			background: #dbdbdb url($images/select_arrow_bg.gif) repeat-x left center
+			position: absolute
+			border: 1px solid #707070
+			border-radius: 3px
+			width: 1.08em
+			height: 1.15em
+			line-height: 1em
+			padding: 1px
+			text-align: center
+			right, top: 2px
+
+			div extends .inline-block
+				background: transparent url($images/select_arrow.gif) no-repeat center center
+				width: 7px
+				height: 4px
 
 .selectbox.disabled .display
 	color: #999
@@ -1297,126 +1312,75 @@ dl#feed
 .selectbox.focused .display .text extends .inline-block
 	background-color: #39f
 	color: #fcfcfc
+	vertical-align: baseline
 
 .selectbox .display.active
 	border-color: #7b7d83
-
-.selectbox .display .btn
-	background: #dbdbdb url($images/select_arrow_bg.gif) repeat-x left center
-	position: absolute
-	border: 1px solid #707070
-	width: 1.08em
-	height: 1.15em
-	line-height: .92em
-	padding: 1px
-	right, top: 0
-	text-align: center
-
-	div extends .inline-block
-		background: transparent url($images/select_arrow.gif) no-repeat center center
-		position: absolute
-		width: 7px
-		height: 4px
-		left: .33em
-		top: .5em
-
-.selectbox .display.active .btn
-	box-shadow: inset 0 0 1px 1px #9eb0ba
+	.btn
+		box-shadow: inset 0 0 1px 1px #9eb0ba
 
 .selectbox .display.hover .btn
 	background-image: url($images/select_arrow_bg_hover.gif)
-
-.selectbox .value
-	display: none
 
 /* dropdown styles */
 .selectbox.items
 	background: #fff
 	border: 1px solid #828790
+	border-radius: 5px
 	display: block
-	font-family: arial
 	font-size: 1em
-	list-style-type: none
 	margin: 0
-	padding: 0 0 1px 0
 	overflow-x: hidden
 	overflow-y: auto
-	z-index: 99999
-	box-shadow: 0 2px 5px rgba(0,0,0,.3)
+	z-index: 999
+	box-shadow: 0 2px 5px rgba(0,0,0, .3)
+	padding: 2px
+
+	&.above
+		box-shadow: 0 -2px 5px rgba(0,0,0, .3)
 
 	li
 		display: block
 		margin, padding: 0
-		/*white-space:nowrap; maybe necessary if using fixedWidth: false */
+		// white-space: nowrap may be necessary if using fixed: false
 
-	li.first
-		margin-top: 0
-
-	li > .item
+	.item
 		color: #000
 		cursor: default
 		display: block
 		padding: 4px 6px
 		text-decoration: none
+		.text
+			base: .inline-block
 
-	li > .item > .text
-		base: .inline-block
+	.selected .item
+		background-color: #f5eeee !important
 
-	li.selected > .item
-		font-weight: bold
-		background-color: #f5eeee
-
-	li.disabled > .item
+	.disabled .item
 		color: #999
 
-	li.hover > .item
-		background-color: #3399ff
-		color: #fcfcfc
-
-	.value
-		display: none
+	.hover .item
+		background-color: #3399ff !important
+		color: #fcfcfc !important
 
 	// optgroup styles
-	.optgroup
-		.items
-			border: none
-			margin, padding: 0
-			box-shadow: none
-			li > .item
-				padding-left: 1em
-		> .label
-			gradient: #fff, darken(#fff, 5%)
-			color: #666
-			cursor: default
-			font-weight: bold
-			padding: 7px
-			line-height: 1em
+	.optgroup .label
+		gradient: #fff, darken(#fff, 5%)
+		color: #666
+		cursor: default
+		font-weight: bold
+		line-height: 1em
+		padding: 7px
+	.sub .item
+		padding-left: 1.5em
 
-	.selectbox.items.above
-		box-shadow: 0 -2px 5px rgba(0,0,0,.3)
-
-/* the rest is to add rounding corners */
-.selectbox .display
-	padding: 2px 26px 2px 5px
-	border-radius: 5px
-	.btn
-		right, top: 2px
-		border-radius: 3px
-
-.selectbox.items
-	padding: 2px
-	border-radius: 5px
-	> li > a
+	/* rounded corners */
+	li a
 		padding: 4px 6px
-	> li.first > .item
+	li.first .item
 		border-radius: 5px 5px 0 0
-	> li.last > .item
+	li.last .item
 		border-radius: 0 0 5px 5px
-	> li > .label
-		line-height: 2.08em
-		padding: 4px 6px
-	> li > .items li > .item
-		padding: 4px 6px 4px 12px
 
 /* HTML5 overrides for deprecated alignment/width params
 --------------------------------------------------------- */
